fix: vertical alignement in icon link

--- a/scss/_links.scss
+++ b/scss/_links.scss
@@ -29,6 +29,7 @@
   padding: $ouds-link-space-padding-block $ouds-link-space-padding-inline;
   text-align: start;
   text-wrap: pretty;
+  vertical-align: middle;
   background: transparent;
   border: 0;
 
